fix overflow content on windows

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,8 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   font-family: 'Titillium Web', sans-serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
